Closed Bug 1404383 Opened 8 years ago Closed 8 years ago

nsStringBundle preload can fail in content processes leaving the process without localized strings

Categories

(Core :: DOM: Content Processes, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox57 --- fixed
firefox58 --- fixed

People

(Reporter: gkrizsanits, Assigned: gkrizsanits)

References

Details

Attachments

(1 file)

This is a fall out from bug 1385249.
Blocks: 1385249
Blocks: 1401599
Comment on attachment 8913739 [details] [diff] [review] Delay nsStringBundle preloading in content processes. v2 Approval Request Comment [Feature/Bug causing the regression]: Bug 1363482 (preloading strings) [User impact if declined]: Preloading localized string bundles might fail, leaving the content process without localized strings forever. This can lead to a wide variety of failures from incorrectly rendering buttons to failing reporting errors and who knows what else. [Is this code covered by automated tests?]: Mostly. There can be still edge cases we have not considered, but this patch fixes the ones I can think of and fixed the intermittent failures I know about. [Has the fix been verified in Nightly?]: Not yet. [Needs manual test from QE? If yes, steps to reproduce]: I don't think manual testing is possible. Landing the patch under bug 1385249 will do some validation and bug 1401599 should be fixed by this patch as well. [List of other uplifts needed for the feature/fix]: None. [Is the change risky?]: It is more risky not taking it. [Why is the change risky/not risky?]: The worst it can cause is that by delaying the preloading of these strings, it might come with a tiny startup time regression. Not taking it can result misbehaving content processes. [String changes made/needed]: None.
Attachment #8913739 - Flags: approval-mozilla-beta?
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Comment on attachment 8913739 [details] [diff] [review] Delay nsStringBundle preloading in content processes. v2 Seems like a must fix for 57, Beta57+
Attachment #8913739 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: