Bug 1404383 - Delay nsStringBundle preloading in content processes. r=smaug Early in the startup the channel creation might fail, in nsStringBundle load and any further attempts are prevented which leads to broken ocaization support for the process. Let's wait until the child process learns about the chrome URLs registered on the parent side with the preloads.